# GitCode

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
App/: CMakeLists.txt  test.cpp
Asset/Shader/: CMakeLists.txt  HelloTriangle.vert
CmakeUtils/: ModuleFunction.cmake
Common/: CMakeLists.txt  ClassDefine.h  CommonModule.cpp  CommonModule.h
Engine/: CMakeLists.txt
Engine/App/: App.h  AppExport.h  CMakeLists.txt  WindowApp.h
Engine/App/Private/: App.cpp  WindowApp.cpp
Engine/Core/: CMakeLists.txt
Engine/Core/BasicType/: BasicType.h  CMakeLists.txt  String.h
Engine/Core/BasicType/Private/: BasicTypeModule.h
Engine/Core/Common/: ClassMacro.h  CommonExport.h  DeleteMacro.h  ErrorCode.h
Engine/Core/Common/Private/: CommonModule.h  ErrorCode.cpp
Engine/Core/Engine/: CMakeLists.txt  Engine.h  EngineExport.h
Engine/Core/Engine/Private/: EngineModule.cpp  EngineModule.h
Engine/Core/Geometry/: MeshComponent.h
Engine/Core/Geometry/Private/: GeometryModule.cpp  MeshComponent.cpp
Engine/Core/Logger/: CMakeLists.txt  Logger.h
Engine/Core/Logger/Private/: LoggerModule.h
Engine/Core/ModuleCore/: ModuleCore.h  ModuleCoreExport.h  ModuleSingleton.h
Engine/Core/ModuleCore/Private/: ModuleManager.cpp  ModuleManager.h
Engine/Core/Platform/: CMakeLists.txt
Engine/Core/SignalCenter/: SignalCenter.h  SignalCenterExport.h
Engine/Core/SignalCenter/Private/: SignalCenterModule.h
Engine/Core/World/: CMakeLists.txt  World.h  WorldExport.h
Engine/Core/World/Private/: WorldManager.h
Engine/Engine/: CMakeLists.txt  Engine.h  EngineCore.h  EngineExport.h
Engine/Engine/Private/: Engine.cpp  EngineManager.cpp  EngineManager.h
Engine/Geometry/: CMakeLists.txt  GeometryExport.h  MeshComponent.h  TransformComponent.h  Vertex.h
Engine/Geometry/Private/: GeometryModule.h
Engine/Module/: CMakeLists.txt
Engine/Module/ECS/: CMakeLists.txt  ECS.h
Engine/Module/ECS/Private/: WorldManager.h
Engine/Module/Logger/: Logger.h
Engine/Module/Logger/Private/: Logger.cpp  LoggerModule.cpp  LoggerModule.h
Engine/Module/ModuleCore/: CMakeLists.txt  ModuleSingleton.h
Engine/Module/SignalCenter/: CMakeLists.txt
Engine/Render/: CMakeLists.txt
Engine/Render/RenderInterface/: IWindow.h  RenderComponent.h
Engine/Render/RenderManager/: CMakeLists.txt  RenderManager.h  RenderManagerExport.h
Engine/Render/VulkanRender/: CMakeLists.txt  VulkanManager.h  VulkanRender.h  VulkanRenderExport.h
Engine/UI/Window/: CMakeLists.txt  WindowExport.h  WindowInterface.h
Engine/UnitTest/: CMakeLists.txt  TestECS.cpp  TestLogger.cpp  TestModuleCore.cpp  TestSignalCenter.cpp  TestWorld.cpp  main.cpp
Engine/World/: World.h
Engine/World/Private/: World.cpp  WorldManager.cpp  WorldManager.h
Example/: CMakeLists.txt
Example/UITest/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
Source/: CMakeLists.txt
Source/App/: CMakeLists.txt
Source/App/GameDemo/: App.cpp  App.h  CMakeLists.txt  main.cpp
Source/App/HelloWorld/: CMakeLists.txt  main.cpp
Source/App/UITest/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
Source/App/UnitTest/: CMakeLists.txt  Test.cpp  TestECS.cpp  TestLogger.cpp  TestModuleManager.cpp  TestSignalCenter.cpp  main.cpp
Source/Common/Private/: CommonModule.h
Source/Core/: CMakeLists.txt
Source/Core/BasicType/: BasicType.h  String.h
Source/Core/Common/: CMakeLists.txt  ClassDefine.h  ClassMacro.h  CommonExport.h  DeleteMacro.h  ErrorCode.h  IModule.h
Source/Core/Core/: CMakeLists.txt  Core.h  CoreExport.h
Source/Core/ECS/: CMakeLists.txt  ECS.h  ECSExport.h
Source/Core/Logger/: CMakeLists.txt  Logger.h  LoggerExport.h
Source/Core/Module/: CMakeLists.txt  IModule.h  Module.h  ModuleExport.h  ModuleSingleton.h
Source/Core/Platform/: CMakeLists.txt  PlatformExport.h
Source/Core/SignalCenter/: CMakeLists.txt  SignalCenter.h
Source/Platform/: CMakeLists.txt
Source/UI/Window/: CMakeLists.txt
(+116 files in other folders)
